--- a/pages/enviar-video.html
+++ b/pages/enviar-video.html
@@ -34,14 +34,14 @@
         <form class="container__formulario" data-formulario>
             <h2 class="formulario__titulo">Envie um vídeo!</h3>
                 <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="url">Link embed</label>
+                    <label class="campo__etiqueta" for="url">Link</label>
                     <input name="url" class="campo__escrita" required
                         placeholder="Por exemplo: https://www.youtube.com/embed/FAY1K2aUg5g" id='url' data-url />
                 </div>
 
 
                 <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="titulo">Titulo do vídeo</label>
+                    <label class="campo__etiqueta" for="titulo">Título do vídeo</label>
                     <input name="titulo" class="campo__escrita" required placeholder="Neste campo, dê o nome do vídeo"
                         id='titulo' data-titulo />
                 </div>
